k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapi-gists-deployment
  labels:
    app: fastapi-gists-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fastapi-gists-app
  template:
    metadata:
      labels:
        app: fastapi-gists-app
    spec:
      containers:
        - name: fastapi-gists-container
          image: shivsid/fastapi-gists-app:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080

          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 5

          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 15
