k8s/service-clusterip.yml
apiVersion: v1
kind: Service
metadata:
  name: fastapi-gists-service
spec:
  selector:
    app: fastapi-gists-app
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
