k8s/service-loadbalancer.yml
apiVersion: v1
kind: Service
metadata:
  name: fastapi-gists-service
spec:
  selector:
    app: fastapi-gists-app
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 8080
