k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: fastapi-gists-service
spec:
  type: NodePort
  selector:
    app: fastapi-gists-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      nodePort: 30080
